--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    
+    <!-- parte superiore, non è dinamica e va inserita fuori dall'app -->
+    <div class="logo">
+        <img src="img/Logo.png" alt="#">
+        <h1>TO DO LIST</h1>
+    </div>
+
+
+
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="assets/myscript.js"></script>
 </body>
