--- a/index.html
+++ b/index.html
@@ -6,12 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>todo_list</title>
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 <body>
     <!-- parte superiore, non è dinamica e va inserita fuori dall'app -->
     <div class="logo">
         <img src="img/Logo.png" alt="#">
         <h1>TO DO LIST</h1>
+    </div>
+    <div id="app">
+        
+        <div class="container">
+            <div class="search">
+                <input 
+                v-model="newTodo"
+                type="text"
+                placeholder="Nuovo elemento"
+                >
+                <button 
+                @click="addTodo"
+                >
+                Aggiungi
+                </button>
+            </div>
+            <div>
+                <ul>
+                    <li v-for="(todo, index) in toDos">
+                        {{ todo.text }}
+                        <i
+                        @click="deleteItem" 
+                        class="fa-solid fa-circle-xmark" style="color: #000000;"
+                        ></i>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 
 
